[project]
name = "rasmchi-logo-backend"
version = "0.1.0"
description = "Rasmchi logo image analysis and fix suggestion backend"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
py-modules = ["app", "main"]
